# appimage-finder

./: .gitignore  Cargo.toml  LICENSE  README.md  appimage-finder  appimage-finder.py  github-topic-appimage.py  package.sh
src/: cli.rs  downloader.rs  extractor.rs  filter.rs  main.rs  model.rs  output.rs  utils.rs
