[package]
edition = "2024"
name = "appimage-finder"
version = "0.1.1"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}
csv = "1.3"
flate2 = "1.1"
indicatif = "0.17"
regex = "1.10"
reqwest = {version = "0.12", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
